# hfx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.c  library.h
example/: CMakeLists.txt  main.c
example/shaders/: example.glsl
include/: common.h  igw.h  logger.h  types.h
include/arch/: thread.h
include/input/: keyboard.h  mouse.h
include/math/: transform.h
include/memory/: memory.h
include/rendering/: buffer.h  camera.h  mesh.h  renderer.h  shader.h  texture.h  window.h
include/rendering/imgui/: igw.h
include/video/: window.h
src/: common.c  igc.c  logger.c
src/math/: transform.c
src/memory/: memory.c
src/rendering/: buffer.c  mesh.c  renderer.c  shader.c  texture.c  window.c
src/rendering/imgui/: igw.c
src/video/: window.c
